[package]
name = "webview-multi-launcher"
version = "0.1.1"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2024"
repository = "https://github.com/RoganMatrivski/webview-multi-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "^0.1.48"


[dependencies]
clap = { version = "^4.5", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["capture-spantrace"] }
config = "0.15.21"
dialoguer = "0.12.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tao = "0.34.6"
tokio = { version = "1.50.0", features = ["full", "macros", "signal"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wry = "0.54.3"
filetime = "0.2.27"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
webkit2gtk = "2.0.2"

[profile.dev.package.backtrace]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
